Migraiting from FluentIterable