@@ -20,12 +20,14 @@
 package springfox.petstore.repository;
 
 import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
+
 import com.google.common.collect.Iterables;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
+import static java.util.stream.Collectors.toList;
 
 public class MapBackedRepository<K, V extends Identifiable<K>> {
   Map<K, V> service = new HashMap<K, V>();
@@ -51,8 +53,8 @@ public class MapBackedRepository<K, V extends Identifiable<K>> {
   }
   
   public List<V> where(Predicate<V> criteria) {
-    return FluentIterable
-            .from(service.values())
-            .filter(criteria).toList();
+    return
+            service.values().stream()
+            .filter(criteria).collect(toList());
   }
 }
