@@ -22,11 +22,7 @@ package springfox.documentation.spring.web.readers.parameter;
 import com.fasterxml.classmate.ResolvedType;
 import com.fasterxml.classmate.members.ResolvedField;
 import com.fasterxml.classmate.members.ResolvedMethod;
-import com.google.common.annotations.VisibleForTesting;
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.Sets;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -48,18 +44,16 @@ import java.beans.IntrospectionException;
 import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
 import java.lang.reflect.Method;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
-import static com.google.common.base.Predicates.*;
-import static com.google.common.base.Strings.*;
-import static com.google.common.collect.FluentIterable.*;
-import static com.google.common.collect.Lists.*;
-import static com.google.common.collect.Sets.*;
+import static java.util.function.Function.identity;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
+import static org.springframework.util.StringUtils.isEmpty;
 import static springfox.documentation.schema.Collections.*;
 import static springfox.documentation.schema.Types.*;
 import static springfox.documentation.spring.web.readers.parameter.ParameterTypeDeterminer.*;
@@ -85,36 +79,36 @@ public class ModelAttributeParameterExpander {
   }
 
   public List<Parameter> expand(ExpansionContext context) {
-    List<Parameter> parameters = newArrayList();
+    List<Parameter> parameters = new ArrayList();
     Set<PropertyDescriptor> propertyDescriptors = propertyDescriptors(context.getParamType().getErasedType());
     Map<Method, PropertyDescriptor> propertyLookupByGetter
         = propertyDescriptorsByMethod(context.getParamType().getErasedType(), propertyDescriptors);
-    Iterable<ResolvedMethod> getters = FluentIterable.from(accessors.in(context.getParamType()))
-        .filter(onlyValidGetters(propertyLookupByGetter.keySet()));
+    Iterable<ResolvedMethod> getters = accessors.in(context.getParamType()).stream()
+        .filter(onlyValidGetters(propertyLookupByGetter.keySet())).collect(toList());
 
-    Map<String, ResolvedField> fieldsByName = FluentIterable.from(this.fields.in(context.getParamType()))
-        .uniqueIndex(new Function<ResolvedField, String>() {
+    Map<String, ResolvedField> fieldsByName = StreamSupport.stream(this.fields.in(context.getParamType()).spliterator(),false)
+        .collect(toMap((new Function<ResolvedField, String>() {
           @Override
           public String apply(ResolvedField input) {
             return input.getName();
           }
-        });
+        }), identity()));
 
 
     LOG.debug("Expanding parameter type: {}", context.getParamType());
     final AlternateTypeProvider alternateTypeProvider = context.getDocumentationContext().getAlternateTypeProvider();
 
-    FluentIterable<ModelAttributeField> attributes =
+    List<ModelAttributeField> attributes =
         allModelAttributes(
             propertyLookupByGetter,
             getters,
             fieldsByName,
             alternateTypeProvider);
 
-    FluentIterable<ModelAttributeField> expendables = attributes
-        .filter(not(simpleType()))
-        .filter(not(recursiveType(context)));
-    for (ModelAttributeField each : expendables) {
+    attributes.stream()
+        .filter(simpleType().negate())
+        .filter(recursiveType(context).negate())
+            .forEach((each) -> {
       LOG.debug("Attempting to expand expandable property: {}", each.getName());
       parameters.addAll(
           expand(
@@ -122,11 +116,11 @@ public class ModelAttributeParameterExpander {
                   nestedParentName(context.getParentName(), each),
                   each.getFieldType(),
                   context.getOperationContext())));
-    }
+    });
 
-    FluentIterable<ModelAttributeField> collectionTypes = attributes
-        .filter(and(isCollection(), not(recursiveCollectionItemType(context.getParamType()))));
-    for (ModelAttributeField each : collectionTypes) {
+    Stream<ModelAttributeField> collectionTypes = attributes.stream()
+        .filter(isCollection().and(recursiveCollectionItemType(context.getParamType()).negate()));
+    collectionTypes.forEach((each) -> {
       LOG.debug("Attempting to expand collection/array field: {}", each.getName());
 
       ResolvedType itemType = collectionElementType(each.getFieldType());
@@ -141,34 +135,35 @@ public class ModelAttributeParameterExpander {
           parameters.addAll(expand(childContext));
         }
       }
-    }
+    });
 
-    FluentIterable<ModelAttributeField> simpleFields = attributes.filter(simpleType());
-    for (ModelAttributeField each : simpleFields) {
+    Stream<ModelAttributeField> simpleFields = attributes.stream().filter(simpleType());
+    simpleFields.forEach((each) -> {
       parameters.add(simpleFields(context.getParentName(), context, each));
-    }
-    return FluentIterable.from(parameters)
-        .filter(not(hiddenParameters()))
-        .filter(not(voidParameters()))
-        .toList();
+    });
+    return parameters.stream()
+        .filter(hiddenParameters().negate())
+        .filter(voidParameters().negate())
+        .collect(toList());
   }
 
-  private FluentIterable<ModelAttributeField> allModelAttributes(
+  private List<ModelAttributeField> allModelAttributes(
       Map<Method, PropertyDescriptor> propertyLookupByGetter,
       Iterable<ResolvedMethod> getters,
       Map<String, ResolvedField> fieldsByName,
       AlternateTypeProvider alternateTypeProvider) {
 
-    FluentIterable<ModelAttributeField> modelAttributesFromGetters = from(getters)
-        .transform(toModelAttributeField(fieldsByName, propertyLookupByGetter, alternateTypeProvider));
+    Stream<ModelAttributeField> modelAttributesFromGetters = StreamSupport.stream(getters.spliterator(), false)
+        .map(toModelAttributeField(fieldsByName, propertyLookupByGetter, alternateTypeProvider));
 
-    FluentIterable<ModelAttributeField> modelAttributesFromFields = from(fieldsByName.values())
+    Stream<ModelAttributeField> modelAttributesFromFields = fieldsByName.values().stream()
         .filter(publicFields())
-        .transform(toModelAttributeField(alternateTypeProvider));
+        .map(toModelAttributeField(alternateTypeProvider));
 
-    return FluentIterable.from(Sets.union(
-        modelAttributesFromFields.toSet(),
-        modelAttributesFromGetters.toSet()));
+    return Stream.concat(
+        modelAttributesFromFields,
+        modelAttributesFromGetters)
+            .collect(toList());
   }
 
   private Function<ResolvedField, ModelAttributeField> toModelAttributeField(
@@ -189,7 +184,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<ResolvedField> publicFields() {
     return new Predicate<ResolvedField>() {
       @Override
-      public boolean apply(ResolvedField input) {
+      public boolean test(ResolvedField input) {
         return input.isPublic();
       }
     };
@@ -198,7 +193,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<Parameter> voidParameters() {
     return new Predicate<Parameter>() {
       @Override
-      public boolean apply(Parameter input) {
+      public boolean test(Parameter input) {
         return isVoid(input.getType().orElse(null));
       }
     };
@@ -207,7 +202,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<ModelAttributeField> recursiveCollectionItemType(final ResolvedType paramType) {
     return new Predicate<ModelAttributeField>() {
       @Override
-      public boolean apply(ModelAttributeField input) {
+      public boolean test(ModelAttributeField input) {
         return Objects.equals(collectionElementType(input.getFieldType()), paramType);
       }
     };
@@ -216,7 +211,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<Parameter> hiddenParameters() {
     return new Predicate<Parameter>() {
       @Override
-      public boolean apply(Parameter input) {
+      public boolean test(Parameter input) {
         return input.isHidden();
       }
     };
@@ -248,24 +243,24 @@ public class ModelAttributeParameterExpander {
   private Predicate<ModelAttributeField> recursiveType(final ExpansionContext context) {
     return new Predicate<ModelAttributeField>() {
       @Override
-      public boolean apply(ModelAttributeField input) {
+      public boolean test(ModelAttributeField input) {
         return context.hasSeenType(input.getFieldType());
       }
     };
   }
 
   private Predicate<ModelAttributeField> simpleType() {
-    return and(not(isCollection()), not(isMap()),
-        or(
-            belongsToJavaPackage(),
-            isBaseType(),
+    return isCollection().negate().and(isMap().negate())
+        .and(
+            belongsToJavaPackage().or(
+            isBaseType()).or(
             isEnum()));
   }
 
   private Predicate<ModelAttributeField> isCollection() {
     return new Predicate<ModelAttributeField>() {
       @Override
-      public boolean apply(ModelAttributeField input) {
+      public boolean test(ModelAttributeField input) {
         return isContainerType(input.getFieldType());
       }
     };
@@ -274,7 +269,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<ModelAttributeField> isMap() {
     return new Predicate<ModelAttributeField>() {
       @Override
-      public boolean apply(ModelAttributeField input) {
+      public boolean test(ModelAttributeField input) {
         return Maps.isMapType(input.getFieldType());
       }
     };
@@ -283,7 +278,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<ModelAttributeField> isEnum() {
     return new Predicate<ModelAttributeField>() {
       @Override
-      public boolean apply(ModelAttributeField input) {
+      public boolean test(ModelAttributeField input) {
         return enumTypeDeterminer.isEnum(input.getFieldType().getErasedType());
       }
     };
@@ -292,7 +287,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<ModelAttributeField> belongsToJavaPackage() {
     return new Predicate<ModelAttributeField>() {
       @Override
-      public boolean apply(ModelAttributeField input) {
+      public boolean test(ModelAttributeField input) {
         return ClassUtils.getPackageName(input.getFieldType().getErasedType()).startsWith("java.lang");
       }
     };
@@ -301,7 +296,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<ModelAttributeField> isBaseType() {
     return new Predicate<ModelAttributeField>() {
       @Override
-      public boolean apply(ModelAttributeField input) {
+      public boolean test(ModelAttributeField input) {
         return Types.isBaseType(input.getFieldType())
             || input.getFieldType().isPrimitive();
       }
@@ -328,7 +323,7 @@ public class ModelAttributeParameterExpander {
   private Predicate<ResolvedMethod> onlyValidGetters(final Set<Method> methods) {
     return new Predicate<ResolvedMethod>() {
       @Override
-      public boolean apply(ResolvedMethod input) {
+      public boolean test(ResolvedMethod input) {
         return methods.contains(input.getRawMember());
       }
     };
@@ -341,7 +336,7 @@ public class ModelAttributeParameterExpander {
       name += "[0]";
     }
 
-    if (isNullOrEmpty(parentName)) {
+    if (isEmpty(parentName)) {
       return name;
     }
     return String.format("%s.%s", parentName, name);
@@ -353,36 +348,34 @@ public class ModelAttributeParameterExpander {
 
   private Set<PropertyDescriptor> propertyDescriptors(final Class<?> clazz) {
     try {
-      return FluentIterable.from(getBeanInfo(clazz).getPropertyDescriptors())
-          .toSet();
+      return new HashSet(Arrays.asList(getBeanInfo(clazz).getPropertyDescriptors()));
     } catch (IntrospectionException e) {
       LOG.warn(String.format("Failed to get bean properties on (%s)", clazz), e);
     }
-    return newHashSet();
+    return new HashSet();
   }
 
   private Map<Method, PropertyDescriptor> propertyDescriptorsByMethod(
       final Class<?> clazz,
       Set<PropertyDescriptor> propertyDescriptors) {
-    return FluentIterable.from(propertyDescriptors)
+    return propertyDescriptors.stream()
         .filter(new Predicate<PropertyDescriptor>() {
           @Override
-          public boolean apply(PropertyDescriptor input) {
+          public boolean test(PropertyDescriptor input) {
             return input.getReadMethod() != null
                 && !clazz.isAssignableFrom(Collection.class)
                 && !"isEmpty".equals(input.getReadMethod().getName());
           }
         })
-        .uniqueIndex(new Function<PropertyDescriptor, Method>() {
+        .collect(toMap(new Function<PropertyDescriptor, Method>() {
           @Override
           public Method apply(PropertyDescriptor input) {
             return input.getReadMethod();
           }
-        });
+        }, java.util.function.Function.identity()));
 
   }
 
-  @VisibleForTesting
   BeanInfo getBeanInfo(Class<?> clazz) throws IntrospectionException {
     return Introspector.getBeanInfo(clazz);
   }
